<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2018-2020 DJI
  ~
  ~ Permission is hereby granted, free of charge, to any person obtaining a copy
  ~ of this software and associated documentation files (the "Software"), to deal
  ~ in the Software without restriction, including without limitation the rights
  ~ to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
  ~ copies of the Software, and to permit persons to whom the Software is
  ~ furnished to do so, subject to the following conditions:
  ~
  ~ The above copyright notice and this permission notice shall be included in all
  ~ copies or substantial portions of the Software.
  ~
  ~ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
  ~ IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
  ~ FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
  ~ AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
  ~ LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
  ~ OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
  ~ SOFTWARE.
  ~
  -->

<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    tools:parentTag="dji.ux.beta.accessory.widget.mfioconfig.MFIOConfigWidget">

    <TextView
        android:id="@+id/textview_power_supply_enabled"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/uxsdk_enable_power_supply_port"
        android:textColor="@color/uxsdk_white"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/switch_enable_power_supply"
        app:layout_constraintBottom_toTopOf="@+id/button_port_one" />

    <Switch
        android:id="@+id/switch_enable_power_supply"
        android:layout_width="wrap_content"
        android:layout_height="3dp"
        android:layout_margin="5dp"
        app:layout_constraintDimensionRatio="2:1"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/button_port_one"
        app:layout_constraintStart_toEndOf="@+id/textview_power_supply_enabled"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/textview_port_one"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/uxsdk_port_one"
        android:textColor="@color/uxsdk_white"
        app:layout_constraintTop_toBottomOf="@+id/switch_enable_power_supply"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/textview_port_two"
        app:layout_constraintBottom_toTopOf="@+id/button_port_one" />

    <Button
        android:id="@+id/button_port_one"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button_port_two"
        app:layout_constraintTop_toBottomOf="@+id/textview_port_one"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:text="CLOSE"/>

    <TextView
        android:id="@+id/textview_port_two"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/uxsdk_port_two"
        android:textColor="@color/uxsdk_white"
        app:layout_constraintTop_toBottomOf="@+id/switch_enable_power_supply"
        app:layout_constraintStart_toEndOf="@+id/textview_port_one"
        app:layout_constraintEnd_toStartOf="@+id/textview_port_three"
        app:layout_constraintBottom_toTopOf="@+id/button_port_one" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:id="@+id/button_port_two"
        app:layout_constraintStart_toEndOf="@id/button_port_one"
        app:layout_constraintEnd_toStartOf="@+id/button_port_three"
        app:layout_constraintTop_toBottomOf="@+id/textview_port_two"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:text="CLOSE"/>

    <TextView
        android:id="@+id/textview_port_three"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/uxsdk_port_three"
        android:textColor="@color/uxsdk_white"
        app:layout_constraintTop_toBottomOf="@+id/switch_enable_power_supply"
        app:layout_constraintStart_toEndOf="@+id/textview_port_two"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/button_port_one" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:id="@+id/button_port_three"
        app:layout_constraintStart_toEndOf="@id/button_port_two"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textview_port_three"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:text="CLOSE"/>

</merge>